Finished animations and mobile, corrected borders, social media icons alignment

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -106,6 +106,11 @@ body {
             font-size: 20px;
             padding:5px;
             color: $color3;
+            box-shadow: 2px 2px black;
+            &:hover{
+                color: $color1;
+                border: 2px solid $color3;
+            }
         }
 
     }
@@ -114,20 +119,33 @@ body {
         width:100%;
         grid-row-start: 5;
         grid-row-end: 5;
+        display:flex;
+        justify-content: center;
+        align-items: center;
 
 
         #social_media{
             list-style: none;
             display: flex;
             width: 80vw;
+            height:100%;
             justify-content: space-around;
-            //background-color: green;
-            color: $color3;
-            
+            align-items: center;
 
+            .social_media-icon{
+
+                color: $color3;
+
+                &:hover{
+                    color: $color1;
+                }
+
+            }
         }
         
     }
 
 }
+
+//@media (max-width: )
 
